k8s/deployment-frontend.yaml
# file deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: twitter-frontend
  namespace: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: twitter-frontend
  replicas: 1
  template: 
    metadata:
      labels:
        app: twitter-frontend
    spec:
      containers: 
        - name: frontend
          image: aghora/twitter-frontend:v1
          resources:
            requests:
              memory: "1Mi"
              cpu: "1m"
            limits:
              memory: "1Mi"
              cpu: "1m"
          # ports: 
          #   - containerPort: 3000
          # imagePullPolicy: Never
