k8s/service-frontend.yaml
# file loadBalancer

apiVersion: v1
kind: Service
metadata:
  name: twitter-frontend
spec:
  type: ClusterIP
  selector: 
    app: twitter-frontend
  ports:
    - port: 3000
      protocol: TCP
      name: port
      targetPort: 3000
