k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://*"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: foo.bar.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
               name: twitter-frontend
               port: 
                number: 3000
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
               name: twitter-backend
               port: 
                number: 3005
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
               name: twitter-backend
               port: 
                number: 3006
